testdata/result/gql/!bad_no_statement_after_next.sql.txt
--- !bad_no_statement_after_next.sql
GRAPH FinGraph
RETURN 1 AS x
NEXT

--- Error
syntax error: testdata/input/gql/!bad_no_statement_after_next.sql:4:1: expect one or more GQL statements, but: <eof>
  4|  
   |  ^


--- AST
&ast.GQLGraphQuery{
  GraphClause: &ast.GQLGraphClause{
    PropertyGraphName: &ast.Path{
      Idents: []*ast.Ident{
        &ast.Ident{
          NamePos: 6,
          NameEnd: 14,
          Name:    "FinGraph",
        },
      },
    },
  },
  Query: &ast.GQLMultiLinearQueryStatement{
    Statements: []ast.GQLLinearQueryStatement{
      &ast.GQLSimpleLinearQueryStatement{
        Statements: []ast.GQLPrimitiveQueryStatement{
          &ast.GQLReturn{
            Return: 15,
            Items:  []*ast.GQLReturnItem{
              &ast.GQLReturnItem{
                Star: -1,
                Expr: &ast.IntLiteral{
                  ValuePos: 22,
                  ValueEnd: 23,
                  Base:     10,
                  Value:    "1",
                },
                Alias: &ast.AsAlias{
                  As:    24,
                  Alias: &ast.Ident{
                    NamePos: 27,
                    NameEnd: 28,
                    Name:    "x",
                  },
                },
              },
            },
          },
        },
      },
      &ast.BadGQLLinearQueryStatement{
        BadNode: &ast.BadNode{
          NodePos: 34,
          NodeEnd: 34,
        },
      },
    },
  },
}

--- SQL
GRAPH FinGraph RETURN 1 AS x NEXT 
